# TheNinthAgeTools

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .ignore  CMakeLists.txt  LICENSE  build.sh  build_wasm.sh  compile_commands.json  listgen.cpp  listgen.css  listgen.html  readme.md  utils.py  wasm-sourcemap.py
include/: dom.hpp  input.hpp  js-string.hpp  memory_log.hpp  reactive.hpp  string.h  table.hpp  traits.h  unit.hpp  wasm.hpp
src/: dom.cpp  input.cpp  listgen.cpp  memory_log.cpp  reactive.cpp  string.cpp  table.cpp  unit.cpp  wasm.cpp
webidl/: Console.webidl  CustomElementRegistry.webidl  Document.webidl  Element.webidl  Event.webidl  EventTarget.webidl  Navigator.webidl  Screen.webidl  Selection.webidl  Window.webidl
wit/: world.wit
